[project]
name = "task-scheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaston Gutierrez",email = "gastongutierrez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "asciinet (>=0.3.1,<0.4.0)"
]

[project.scripts]
wf-scheduler = "task_scheduler.__main__:main"

[tool.poetry]
packages = [{ include = "task_scheduler" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
